--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://raw.githubusercontent.com/ripplejb/SubmitButton/main/styles.css">
-    <script type="application/javascript" src="script.js" defer></script>
+    <script type="application/javascript" src="https://raw.githubusercontent.com/ripplejb/SubmitButton/main/script.js" defer></script>
     <title>Document</title>
 </head>
 <body>
